--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 .photo-border {
-    border: 3px solid;
+    border: 2px solid;
 }
 
 /* Default state (for screens > 420px) */
